Better URL for VM

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <main>
 	<div id="htw">
 		<a target="_blanc" href="https://raumservice.htwsaar.de">Stundenplan</a>
-		<a target="_blanc" href="https://stl-virt.htwsaar.de/ovirt-engine/sso/login.html">Virtual Machine</a>
+		<a target="_blanc" href="https://stl-virt.htwsaar.de/">Virtual Machine</a>
 		<a target="_blanc" href="https://stl-wiki.htwsaar.de/informatik/doku.php?id=labore:stl">Labore STL</a>
 		<a target="_blanc" href="https://stl-wiki.htwsaar.de/informatik/doku.php">STL doku-wiki</a>
 		<a target="_blanc" href="https://stdservice.htwsaar.de/index.php?mid=998&muid=0&muuid=0">Student Service</a>
