--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 	</div>
 	<div id="cours">
 		<a target="_blanc" href="https://swl.htwsaar.de/lehre/ws18/db/">Datenbanken I</a>
+		<p class="intersection"></p>
 		<a target="_blanc" href="https://www.htwsaar.de/ingwi/fakultaet/personen/profile/helmut-folz/prog1/folien2018">Programmierung I Vorlesung</a>
+		<a target="_blanc" href="https://www.htwsaar.de/ingwi/fakultaet/personen/profile/helmut-folz/prog1/bsp2018/bsp2018-02-05.zip/view">Programmierung I Beispiel</a>
+		<p class="intersection"></p>
 		<a target="_blanc" href="https://mathcoach.htwsaar.de/openolat/dmz/">Javascript</a>
+		<p class="intersection"></p>
 		<a target="_blanc" href="http://www.guillaumegronier.com/2018-htw/">Mensch-Maschine-Schnittstelle</a>
 	</div>
 </main>
