Add button to add date

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<a target="_blanc" href="http://www.guillaumegronier.com/2018-htw/">Mensch-Maschine-Schnittstelle</a>
 	</div>
 	<div id="datesCtn">
-		
+		<a target="_blanc" href="https://github.com/InfoIsfatesDfhi/InfoIsfatesDfhi.github.io/blob/master/dates.js" id="addDateButton">+ Ajouter une date</a>		
 	</div>
 </main>
 <script type="text/javascript" src="./dates.js"></script>
