Add link to planning of the studies
Because it's becoming strategy

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<a target="_blanc" href="https://stl-wiki.htwsaar.de/informatik/doku.php">STL doku-wiki</a>
 		<a target="_blanc" href="https://stdservice.htwsaar.de/index.php?mid=998&muid=0&muuid=0">Student Service</a>
 		<a target="_blanc" href="https://clix.htwsaar.de/index.jsp?dmy=1540237493556">Clix Service</a>
+		<a target="_blanc" href="https://documents.wingi.net/Info/Info_desktop_de.pdf">Koeffizienten pro Semester</a>
 	</div>
 	<div id="cours">
 		<a target="_blanc" href="https://swl.htwsaar.de/lehre/ws18/db/">Datenbanken I</a>
