Add backlinks to previous index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<button onclick="replaceContent(this, displayedData, document.getElementById('htw'));">HTW Saar</button>
 	<button onclick="replaceContent(this, displayedData, document.getElementById('cours'));">Cours</button>
 	<button onclick="replaceContent(this, displayedData, document.getElementById('datesCtn'));">Dates</button>
+    <button onclick="location.href='index-s3.html'">Index du S3</button>
 </nav>
 
 <main>
