--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 <main>
 		<div id="htw">
 			<a target="_blanc" href="https://raumservice.htwsaar.de">Stundenplan</a>
+			<p class="intersection"></p>
 			<a target="_blanc" href="https://stl-virt.htwsaar.de/">Virtual Machine</a>
 			<a target="_blanc" href="https://stl-wiki.htwsaar.de/informatik/doku.php?id=labore:stl">Labore STL</a>
 			<a target="_blanc" href="https://stl-wiki.htwsaar.de/informatik/doku.php">STL doku-wiki</a>
 		</div>
 		<div id="cours">
-			<p class="intersection"></p>
+                </div>
+                <div id="datesCtn">
 			<p class="intersection"></p>
 			<a target="_blanc" href="https://github.com/InfoIsfatesDfhi/InfoIsfatesDfhi.github.io/blob/master/dates.js"
 				id="addDateButton">+ Ajouter une date</a>
